# expense-tracker

./: .env  .gitignore  README.md  go.work  package-lock.json  package.json  pyproject.toml  tests.ipynb
app/: __init__.py  sql_connector.py
app/routes/: auth.py  main.py
app/static/js/: main.js
archive/: README.md  requirements.txt
archive/app/: __init__.py
archive/app/models/: categories.py  expense.py  initdb.py
archive/app/routes/: expenses.py  main.py
archive/app/static/: styles.css
archive/app/templates/: dashboard.html
backend/: requirements.txt
backend-go/: go.mod  go.sum
backend-go/docs/: backend.md
backend-go/internal/auth/: password.go
backend-go/internal/database/: connector.go  query.go
backend/app/: __init__.py
backend/app/models/: categories.py  transactions.py  users.py
backend/app/routes/: auth.py  bank.py  expenses.py  main.py
backend/app/utils/: _password_utils.py  mongo_user.py  mongodb_connector.py
backend/app/utils/bank_auth/: bank_auth.py  gocardless_api.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: AddExpenseModal.tsx  EditExpenseModal.tsx  ImportTransactionsModal.tsx  LinkBankModal.tsx
frontend/src/components/charts/: PieChart.tsx  StackedBarChart.tsx
local_dev/: expenses.json
mongoapp/: __init__.py
mongoapp/models/: transactions.py  users.py
mongoapp/utils/: __init__.py  _logger.py  mongodb_connector.py
(+2 files in other folders)
